    CPU time twice.  Patch supplied by Bob Mazanec <mazanec@hci.cirr.com>.
  o Changed for_recursive_glob and recursive_glob to not follow symbolic links.
  o Merged the "showprocs" functionallity into "showproc", they were almost the
    same.  (*POTENTIAL INCOMPATIBILITY*)
  o Changed shell initialization so it doesn't change the prompt hooks if they
    have already be set during startup.
-------------------------------------------------------------------------------
11 Jul 93:
  o Changed random command to use random instead or rand.  Supplied the BSD
    random function in osSupport.
  o Changed "programName" variable to "argv0" for compatibility with Tcl 7.0.
    (*POTENTIAL INCOMPATIBILITY*)
  o Simplified shell startup code, including support for separate master
    directories for TclX and Tk.  Tcl_CommandLoop function is now internal.
    (*POTENTIAL INCOMPATIBILITY for C code*)
  o Changed cindex, crange and csubstr to take expressions starting with a
    magic token "end" or "len" that will be substituted before the expression
    is evaluated.
  o Add kludge to get machines with only the timezone variable to handle
    formating time as GMT correctly.
  o Added our own version of wish main, with programmable prompts, etc.
-------------------------------------------------------------------------------
18 Jul 93:
  o Changed "signal trap" to edit the command, replacing %S with the signal
    name rather than storing in the global variable. "signalReceived".  This
    fixes bugs with signals received in a signal handler.
   (*POTENTIAL INCOMPATIBILITY*)
-------------------------------------------------------------------------------
20 Jul 93:
  o Fixed bug with lgets not handling backslashes correctly.
===============================================================================
20 Jul 93: Released TclX7.0c Beta 1.
===============================================================================