@@ -551,3 +551,11 @@
 ===============================================================================
 20 Jul 93: Released TclX7.0c Beta 1.
 ===============================================================================
+22 Jul 93:
+  o Changed filescan (Boyer-Moore) code to prevent code generation bug under
+    HPUX.
+  o Fixed bug in tclXlib string handling.
+-------------------------------------------------------------------------------
+24 Jul 93:
+  o Added ctoken string parsing command.
+-------------------------------------------------------------------------------
